tests/ui/ast_term_from_pool.stderr
error[E0505]: cannot move out of `pool` because it is borrowed
  --> $DIR/ast_term_from_pool.rs:10:10
   |
9  |     let term3 = ast::Term::from(&pool);
   |                                 ----- borrow of `pool` occurs here
10 |     drop(pool);
   |          ^^^^ move out of `pool` occurs here
11 |     println!("{:?}",term3);
   |                     ----- borrow later used here

For more information about this error, try `rustc --explain E0505`.
